--- a/code/epi_model_code/Interpolation_Prior.Rmd
+++ b/code/epi_model_code/Interpolation_Prior.Rmd
@@ -35,7 +35,7 @@ read_in_prior
 ```{r}
 library(here)
 library(fs)
-data.dir=here("/Users/juliachen/Desktop/covid19/data/")
+data.dir=here("/Users/juliachen/Desktop/covid19_cities/data/")
 readin_path <- path(data.dir, "prior_readin.csv")
 readin = as.data.frame(read.csv(readin_path, sep=","))
 readin
@@ -186,23 +186,24 @@ for (i in 1:length(interpolate$y)){
 
 ```{r}
 read_in_prior
-#read_in_prior[7:80,3]=read_in_prior[7:80,3]*1.2
-#read_in_prior[80:92,3]=read_in_prior[80:92,3]*0.7
-
-read_in_prior[7:44,3]=read_in_prior[7:44,3]
-read_in_prior[44:82,3]=read_in_prior[44:82,3]*0.5
-read_in_prior[82:98,3]=read_in_prior[82:98,3]
-
-#read_in_prior[50:98,4]=read_in_prior[50:98,4]*0.01
-#read_in_prior[50:98,5]=read_in_prior[50:98,5]*0.01
-#read_in_prior[50:98,6]=read_in_prior[50:98,6]*0.01
-#read_in_prior[50:98,7]=read_in_prior[50:98,7]*0.01
-#read_in_prior[50:98,8]=read_in_prior[50:98,8]*0.01
+#read_in_prior[7:44,3]=read_in_prior[7:44,3]
+#read_in_prior[44:82,3]=read_in_prior[44:82,3]*0.5
+#read_in_prior[82:98,3]=read_in_prior[82:98,3]
 
 
+#read_in_prior[1:10,3]=read_in_prior[1:10,3]*0.2
+#read_in_prior[1:3,3]=read_in_prior[1:3,3]*0.1
+#read_in_prior[11:88,3]=read_in_prior[11:88,3]*0.7
+
+#read_in_prior[7:44,3]=read_in_prior[7:44,3]*1.1
+#read_in_prior[44:82,3]=read_in_prior[44:82,3]
+#read_in_prior[82:98,3]=read_in_prior[82:98,3]
 
 
-write.csv(read_in_prior,"/Users/juliachen/Desktop/covid19/data/prior_readin_weekly.csv", row.names = FALSE)
+read_in_prior[37:78,3]=read_in_prior[37:78,3]*2
+#read_in_prior[82:98,3]=read_in_prior[82:98,3]
+
+write.csv(read_in_prior,"/Users/juliachen/Desktop/covid19_cities/data/prior_readin_weekly.csv", row.names = FALSE)
 ```
 
 ```{r}
