--- a/index_julia.rmd
+++ b/index_julia.rmd
@@ -77,23 +77,23 @@ knitr::opts_chunk$set(
   include=TRUE
   )
 
-code.dir=here("/Users/juliachen/Desktop/covid19_cities/code/")
-data.dir=here("/Users/juliachen/Desktop/covid19_cities/data/")
-result.dir = here("/Users/juliachen/Desktop/covid19_cities/results/")
-fig.dir = here("/Users/juliachen/Desktop/covid19_cities/figs/")
-output.dir = here("/Users/juliachen/Desktop/covid19_cities/output/")
-code.paper.dir=here("/Users/juliachen/Desktop/covid19_cities/code/epi_model_code")
-code.risk.dir=here("/Users/juliachen/Desktop/covid19_cities/code/risk_model_code/")
-code.scenarios.dir=here("/Users/juliachen/Desktop/covid19_cities/code/scenarios_code/")
+# code.dir=here("/Users/juliachen/Desktop/covid19_cities/code/")
+# data.dir=here("/Users/juliachen/Desktop/covid19_cities/data/")
+# result.dir = here("/Users/juliachen/Desktop/covid19_cities/results/")
+# fig.dir = here("/Users/juliachen/Desktop/covid19_cities/figs/")
+# output.dir = here("/Users/juliachen/Desktop/covid19_cities/output/")
+# code.paper.dir=here("/Users/juliachen/Desktop/covid19_cities/code/epi_model_code")
+# code.risk.dir=here("/Users/juliachen/Desktop/covid19_cities/code/risk_model_code/")
+# code.scenarios.dir=here("/Users/juliachen/Desktop/covid19_cities/code/scenarios_code/")
 
-# code.dir=here("code/")
-# data.dir=here("data/")
-# result.dir = here("results/")
-# fig.dir = here("figs/")
-# output.dir = here("output/")
-# code.paper.dir=here("code/epi_model_code")
-# code.risk.dir=here("code/risk_model_code/")
-# code.scenarios.dir=here("code/scenarios_code/")
+code.dir=here("code/")
+data.dir=here("data/")
+result.dir = here("results/")
+fig.dir = here("figs/")
+output.dir = here("output/")
+code.paper.dir=here("code/epi_model_code")
+code.risk.dir=here("code/risk_model_code/")
+code.scenarios.dir=here("code/scenarios_code/")
 
 ```
 
